Feat(auth): add WordPress-style admin login and make seed for demo data
